# SnakeORCA

./: README.md  pyproject.toml  snakeorca_env_part1.yml  snakeorca_env_part2.yml
notebooks/: Example_commands.ipynb  Experimenting_graph_production.ipynb  Test_ideas.ipynb  test.ipynb  test_old.ipynb
orca_snake/: READ_ME  Snakefile  Snakefile_bottom_up  config.yaml  config_bottom_up.yaml  config_rdm_bed.yaml  expe_bottom_up.tsv  expe_bottom_up_extended.tsv  experiments.tsv
orca_snake/genotoul/: config.yaml  config_cpu.yaml
scripts/: setup.py
scripts/mutations/: mutation.py
scripts/orcanalyse/: Config.yaml  matrices.py
scripts/snake_make/: multiple_mut_analysis.py  mutate_and_rdm.py  permutation_analysis.py  preliminary_analysis.py
scripts/snake_make/Bottom-up/: annot_from_traces.py  bottom_up_expe_compared.py  bottom_up_mutate.py  bottom_up_predict.py  bottom_up_preliminary_analysis.py
scripts/snake_make/ggplot/: ggplot_bottom_up_exp_compared.py  ggplot_expe_compared.py  test_ggplot_rdm_mut_K3K9me3.py
src/orcascreen/: config_analyse.py  matrices.py  mutate.py  mutation.py  process_sequence.py
src/orcascreen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/orcascreen/cli/: abs_rdm_genome.py  absolute_to_relative.py  multiple_mut_analysis.py  mutate_and_rdm.py  predict_and_run_descript.py  preliminary_analysis.py
src/orcascreen/cli/Bottom-up/: annot_from_traces.py  bottom_up_expe_compared.py  bottom_up_mutate.py  bottom_up_predict.py
src/orcascreen/cli/Bottom_up/: annot_from_traces.py  bottom_up_predict.py  bottom_up_preliminary_analysis.py
src/orcascreen/cli/ggplot/: ggplot_bottom_up_exp_compared.py  ggplot_expe_compared.py
test_resources/test_annot/: permut_inter_11_12Mb_and_19_20MB.bed  permut_intra_btw_13828000_and_18048000.bed
test_resources/test_annot/spare_bottom_up/: trace_KO_CTCF.csv  trace_Permut_inter.csv
test_resources/test_genome/: sequence.fa.fai
