[project]
name = "orcascreen"
version = "0.1"
description = "A toolkit for analyzing and visualizing genomic data in approaches using the Orca AI model."
authors = [
    { name = "Florian FORGÉ", email = "florian.forge.pro@gmail.com" }
]
# readme = "README.md"
# license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/Florian-FORGE/Stage-IA3D"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"orcascreen" = ["*.yaml"]
"orcascreen.cli" = ["*.yaml"]
"orcascreen.cli.Bottom_up" = ["*.yaml"]
"orcascreen.cli.ggplot" = ["*.yaml"]

[project.scripts]
absolute_to_relative = "orcascreen.cli.absolute_to_relative:main"
abs_rdm_genome = "orcascreen.cli.abs_rdm_genome:main"
multiple_mut_analysis = "orcascreen.cli.multiple_mut_analysis:main"
mutate_and_rdm = "orcascreen.cli.mutate_and_rdm:main"
permutation_analysis = "orcascreen.cli.permutation_analysis:main"
predict_and_run_descript = "orcascreen.cli.predict_and_run_descript:main"
preliminary_analysis = "orcascreen.cli.preliminary_analysis:main"
annot_from_traces = "orcascreen.cli.Bottom_up.annot_from_traces:main"
bottom_up_expe_compared = "orcascreen.cli.Bottom_up.bottom_up_expe_compared:main"
bottom_up_mutate = "orcascreen.cli.Bottom_up.bottom_up_mutate:main"
bottom_up_predict = "orcascreen.cli.Bottom_up.bottom_up_predict:main"
bottom_up_preliminary_analysis = "orcascreen.cli.Bottom_up.bottom_up_preliminary_analysis:main"
test_ggplot_rdm_mut_K3K9me3 = "orcascreen.cli.ggplot.test_ggplot_rdm_mut_K3K9me3:main"
ggplot_bottom_up_exp_compared = "orcascreen.cli.ggplot.ggplot_bottom_up_exp_compared:main"
ggplot_expe_compared = "orcascreen.cli.ggplot.ggplot_expe_compared:main"

